test_yuriiq/catalog/language/russian/checkout/cart.php
<?php

// text
$_['text_rewrite']	= 'Перезаписать?';
$_['text_button_clear']	= 'Очистить корзину';
$_['text_shipping_detail']	= 'Укажите ваш регион для оценки слоимости доставки.';
$_['text_shipping_estimate']	= 'Оценка стоимости доставки и налоговых сборов';
$_['text_day']	= 'День';
$_['text_use_coupon']	= 'Использовать купон на скидку';
$_['text_reward']	= 'Скидка по бонусным баллам успешно применена!';
$_['text_default_cart_name']	= 'Корзина';
$_['text_use_voucher']	= 'Использовать подарочный сертификат';
$_['text_month']	= 'Месяц';
$_['text_shipping_method']	= 'Выберите удобный способ доставки этого заказа.';
$_['text_week']	= 'Неделя';
$_['text_shipping']	= 'Оценка стоимости доставки успешно применена!';
$_['text_points']	= 'Бонусные баллы: %s';
$_['text_empty']	= 'Ваша корзина пуста!';
$_['text_next']	= 'Воспользуйтесь дополнительными возможностями';
$_['text_success']	= 'Товар <a href="%s">%s</a> добавлен в <a href="%s">корзину покупок</a>!';
$_['text_login']	= 'Необходимо <a href="%s">Войти в Личный кабинет</a> или <a href="%s">создать учетную запись</a> для просмотра цен!';
$_['text_error_save_name']	= 'Поле не может быть пустым!';
$_['text_recurring_item']	= ' Повторяющийся элемент';
$_['text_next_choice']	= 'Если у вас есть код купона на скидку или бонусные баллы, которые вы хотите использовать, выберите соответствующий пункт. Также можно приблизительно узнать стоимость доставки в ваш регион.';
$_['text_success_clear_cart']	= 'Ваша корзина пуста';
$_['text_items']	= '%s';
$_['text_year']	= 'Год';
$_['text_save']	= 'Сохранить?';
$_['text_remove']	= 'Корзина покупок обновлена!';
$_['text_success_save_list']	= 'Ваш список успешно сохранён!';
$_['text_coupon']	= 'Скидка по купону успешно применена!';
$_['text_voucher']	= 'Скидка по подарочному сертификату успешно применена!';
$_['text_success_save_name']	= 'Имя успешно сохранено';
$_['text_use_reward']	= 'Использовать бонусные баллы (доступно %s)';
$_['text_change_cart']	= '[Изменить?]';

// save
$_['save_cart_success']	= 'Корзина успешно сохранена';
$_['save_cart_error']	= 'Ошибка при сохранении корзины';

// error
$_['error_stock']	= 'Товары, отмеченные ***, недоступны в нужном количестве или отсутствуют на складе!';
$_['error_no_shipping']	= 'Нет доступных способов доставки для указанного региона. <a href="%s">Свяжитесь с нами</a>, мы решим этот вопрос!';
$_['error_reward']	= 'Укажите пожалуйста количество бонусных баллов для оплаты этого заказа!';
$_['error_maximum']	= 'Максимально возможная сумма для оплаты баллами составляет %s!';
$_['error_postcode']	= 'Почтовый индекс должен быть длиной от 2 до 10 символов!';
$_['error_zone']	= 'Укажите район / область!';
$_['error_country']	= 'Укажите страну!';
$_['error_minimum']	= 'Минимальное количество для заказа товара %s составляет %s!';
$_['error_product']	= 'Ваша корзина пуста!';
$_['error_points']	= 'У вас нет %s бонусных баллов!';
$_['error_coupon']	= 'Ошибка: купон либо недействителен, либо истек срок его действия, либо достигнут предел его использования!';
$_['error_required']	= 'Поле %s должно быть заполнено!';
$_['error_shipping']	= 'Необходимо указать способ доставки!';
$_['error_voucher']	= 'Ошибка: код подарочного сертификата неправильный или он уже был использован!';

// button
$_['button_create']	= 'Создать пустую корзину';
$_['button_save_name']	= 'Сохранить имя';
$_['button_save']	= 'Сохранить корзину';

// entry
$_['entry_zone']	= 'Район / область:';
$_['entry_coupon']	= 'Введите код купона:';
$_['entry_postcode']	= 'Почтовый индекс:';
$_['entry_reward']	= 'Сколько баллов использовать (максимум %s):';
$_['entry_voucher']	= 'Введите код подарочного сертификата:';
$_['entry_country']	= 'Страна:';

// column
$_['column_model']	= 'Модель';
$_['column_name']	= 'Название товара';
$_['column_image']	= 'Фото';
$_['column_total']	= 'Итого';
$_['column_quantity']	= 'Количество';
$_['column_price']	= 'Цена за единицу товара';

// confirm
$_['confirm_no']	= 'Нет';
$_['confirm_cancel']	= 'Отмена';
$_['confirm_header']	= 'Подтвердите';
$_['confirm_yes']	= 'Да';

// heading
$_['heading_title']	= 'Корзина покупок';
$_['text_checkbox'] = 'Показать с учетом скидки';
?>